UI alignment issue for EGV in order confirmation

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/mpl_egv.css
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-blue/css/mpl_egv.css
@@ -578,6 +578,8 @@
 
 /* Add EGV To Wallet End */	
 
+/*EGV Order Confirmation */
+.egvProductOrderInfoHeading {width: auto !important;}
 
 /*Account Page CSS*/
 .orderStatementContainer {
